chore(styles): Reduce bottom spacing of content and site titles to avoid scrollbars (#3466)

--- a/system-addon/content-src/components/Base/_Base.scss
+++ b/system-addon/content-src/components/Base/_Base.scss
@@ -13,9 +13,9 @@ main {
   margin: auto;
   width: $wrapper-default-width;
 
-  // This is needed to offset the snippets container so things
-  // at the bottom of the page are still visible when snippets are visible
-  padding-bottom: $snippets-container-height;
+  // Offset the snippets container so things at the bottom of the page are still
+  // visible when snippets / onboarding are visible. Adjust for other spacing.
+  padding-bottom: $snippets-container-height - $section-spacing - $base-gutter;
 
   @media (min-width: $break-point-small) {
     width: $wrapper-max-width-small;
